tests/errors/syn_call10.java
public class syn_call10{
public static void main(String[] args){
 method(4, 3 )
}
}